Fix overlapping text on short screens

--- a/client/src/app/footer/footer.component.scss
+++ b/client/src/app/footer/footer.component.scss
@@ -15,6 +15,14 @@
             padding: 48px 0;
             box-sizing: border-box;
 
+            @media (max-height: 670px) {
+                height: auto;
+
+                .copyright {
+                    margin-top: 64px;
+                }
+            }
+
             h1 {
                 font-size: 32px;
                 margin-bottom: 64px;
